--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin to USD with Maze and Sudoku</title>
+  <title>Bitcoin Converter and Maze Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@
       margin-top: 20px;
     }
     .sudoku-container table {
-      margin: 10px auto;
+      margin: 0 auto;
       border-collapse: collapse;
     }
     .sudoku-container td {
@@ -67,32 +67,98 @@
   </style>
 </head>
 <body>
-  <h1>Bitcoin and USD Converter</h1>
-  <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
-  <div id="usdToBtc" class="price">Loading 1 USD to BTC...</div>
+  <!-- Part 1: Bitcoin and USD Conversion -->
+  <div>
+    <h1>Bitcoin and USD Converter</h1>
+    <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
+    <div id="usdToBtc" class="price">Loading 1 USD to BTC...</div>
 
-  <div class="conversion-container">
-    <input type="number" id="btcInput" placeholder="Enter BTC">
-    <input type="number" id="usdInput" placeholder="Enter USD">
+    <div class="conversion-container">
+      <label for="btcInput" style="font-size: 1.5rem;">BTC:</label>
+      <input
+        type="number"
+        id="btcInput"
+        placeholder="Enter BTC"
+        style="font-size: 1.5rem; padding: 10px; margin: 10px; width: 200px;"
+      />
+      <br />
+      <label for="usdInput" style="font-size: 1.5rem;">USD:</label>
+      <input
+        type="number"
+        id="usdInput"
+        placeholder="Enter USD"
+        style="font-size: 1.5rem; padding: 10px; margin: 10px; width: 200px;"
+      />
+    </div>
   </div>
 
-  <div id="timer">Elapsed Time: 0 seconds</div>
+  <!-- Part 2: Maze Game and Sudoku Integration -->
+  <div id="timer" style="font-size: 1.5rem; margin-top: 20px;">Elapsed Time: 0 seconds</div>
   <div class="challenge-container">
     <canvas id="mazeCanvas" width="300" height="300"></canvas>
+
+    <!-- Sudoku Container -->
+    <div id="sudokuContainer" class="sudoku-container">
+      <h2>Solve This Sudoku!</h2>
+      <table id="sudokuTable"></table>
+      <button id="solveSudokuBtn">Solve</button>
+    </div>
   </div>
 
   <script>
+    // Part 1: Bitcoin and USD Conversion
+    let btcToUsdPrice = null;
+
+    async function fetchBitcoinPrice() {
+      try {
+        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+        if (!response.ok) throw new Error('API request failed');
+        const data = await response.json();
+        btcToUsdPrice = data.bitcoin.usd;
+        document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsdPrice.toLocaleString()} USD`;
+        document.getElementById('usdToBtc').innerText = `1 USD = ${(1 / btcToUsdPrice).toFixed(8)} BTC`;
+      } catch (error) {
+        document.getElementById('btcToUsd').innerText = 'Failed to fetch Bitcoin price.';
+        document.getElementById('usdToBtc').innerText = 'Please try again later.';
+      }
+    }
+
+    document.getElementById('btcInput').addEventListener('input', (e) => {
+      const btcValue = parseFloat(e.target.value);
+      if (!isNaN(btcValue) && btcToUsdPrice) {
+        document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
+      } else {
+        document.getElementById('usdInput').value = '';
+      }
+    });
+
+    document.getElementById('usdInput').addEventListener('input', (e) => {
+      const usdValue = parseFloat(e.target.value);
+      if (!isNaN(usdValue) && btcToUsdPrice) {
+        document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
+      } else {
+        document.getElementById('btcInput').value = '';
+      }
+    });
+
+    fetchBitcoinPrice();
+    setInterval(fetchBitcoinPrice, 60000);
+
+    // Part 2: Maze Game and Sudoku Integration
     const mazeCanvas = document.getElementById('mazeCanvas');
     const ctx = mazeCanvas.getContext('2d');
     const mazeSize = 15;
     const cellSize = mazeCanvas.width / mazeSize;
-    let maze, player, end, btcToUsdPrice;
+    let maze, player, end;
+    let elapsedTime = 0;
+    let timerInterval;
+    let mazeSolved = false;
 
-    // Generate a solvable maze
     function generateMaze(size) {
       const maze = Array(size).fill(null).map(() => Array(size).fill(1));
       const stack = [];
-      let x = 0, y = 0;
+      let x = 0,
+        y = 0;
       maze[y][x] = 0;
       stack.push([x, y]);
 
@@ -116,7 +182,6 @@
       return maze;
     }
 
-    // Draw the maze
     function drawMaze() {
       ctx.clearRect(0, 0, mazeCanvas.width, mazeCanvas.height);
       for (let i = 0; i < mazeSize; i++) {
@@ -127,24 +192,43 @@
           }
         }
       }
-      // Draw player
       ctx.fillStyle = '#f7931a';
       ctx.fillRect(player.x * cellSize, player.y * cellSize, cellSize, cellSize);
-      // Draw end point
       ctx.fillStyle = '#33cc33';
       ctx.fillRect(end.x * cellSize, end.y * cellSize, cellSize, cellSize);
     }
 
-    // Initialize maze
     function initializeMaze() {
       maze = generateMaze(mazeSize);
       player = { x: 0, y: 0 };
       end = { x: mazeSize - 1, y: mazeSize - 1 };
+      mazeSolved = false;
       drawMaze();
+      startTimer();
     }
 
-    // Handle player movement
+    function startTimer() {
+      elapsedTime = 0;
+      clearInterval(timerInterval);
+      timerInterval = setInterval(() => {
+        elapsedTime++;
+        document.getElementById('timer').innerText = `Elapsed Time: ${elapsedTime} seconds`;
+
+        if (elapsedTime >= 60) {
+          resetGame();
+        }
+      }, 1000);
+    }
+
+    function resetGame() {
+      clearInterval(timerInterval);
+      document.getElementById('sudokuContainer').style.display = 'none';
+      mazeCanvas.style.display = 'block';
+      initializeMaze();
+    }
+
     document.addEventListener('keydown', (e) => {
+      if (mazeSolved) return;
       const moves = {
         ArrowUp: { x: 0, y: -1 },
         ArrowDown: { x: 0, y: 1 },
@@ -165,49 +249,69 @@
           player.x = newX;
           player.y = newY;
           drawMaze();
+          if (player.x === end.x && player.y === end.y) {
+            mazeSolved = true;
+            if (elapsedTime <= 30) showSudoku();
+          }
         }
       }
     });
 
-    // Fetch Bitcoin price
-    async function fetchBitcoinPrice(retryCount = 3) {
-      try {
-        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
-        if (!response.ok) throw new Error('API request failed');
-        const data = await response.json();
-        btcToUsdPrice = data.bitcoin.usd;
-        document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsdPrice.toLocaleString()} USD`;
-        document.getElementById('usdToBtc').innerText = `1 USD = ${(1 / btcToUsdPrice).toFixed(8)} BTC`;
-      } catch (error) {
-        if (retryCount > 0) {
-          setTimeout(() => fetchBitcoinPrice(retryCount - 1), 2000);
-        } else {
-          document.getElementById('btcToUsd').innerText = 'Failed to fetch Bitcoin price.';
-          document.getElementById('usdToBtc').innerText = 'Please try again later.';
-        }
-      }
+    const sudokuContainer = document.getElementById('sudokuContainer');
+    const sudokuTable = document.getElementById('sudokuTable');
+    const solveSudokuBtn = document.getElementById('solveSudokuBtn');
+    let sudokuPuzzle = [];
+    let sudokuSolution = [];
+
+    function showSudoku() {
+      mazeCanvas.style.display = 'none';
+      sudokuContainer.style.display = 'block';
+      generateSudoku();
     }
 
-    // BTC to USD conversion
-    document.getElementById('btcInput').addEventListener('input', (e) => {
-      const btcValue = parseFloat(e.target.value);
-      if (!isNaN(btcValue) && btcToUsdPrice) {
-        document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
-      }
+    function generateSudoku() {
+      sudokuPuzzle = [
+        [5, 3, 0, 0, 7, 0, 0, 0, 0],
+        [6, 0, 0, 1, 9, 5, 0, 0, 0],
+        [0, 9, 8, 0, 0, 0, 0, 6, 0],
+      ];
+      sudokuSolution = [
+        [5, 3, 4, 6, 7, 8, 9, 1, 2],
+        [6, 7, 2, 1, 9, 5, 3, 4, 8],
+        [1, 9, 8, 3, 4, 2, 5, 6, 7],
+      ];
+      renderSudoku();
+    }
+
+    function renderSudoku() {
+      sudokuTable.innerHTML = '';
+      sudokuPuzzle.forEach((row) => {
+        const tr = document.createElement('tr');
+        row.forEach((cell) => {
+          const td = document.createElement('td');
+          td.innerText = cell === 0 ? '' : cell;
+          td.style.border = '1px solid #333';
+          tr.appendChild(td);
+        });
+        sudokuTable.appendChild(tr);
+      });
+    }
+
+    solveSudokuBtn.addEventListener('click', () => {
+      sudokuTable.innerHTML = '';
+      sudokuSolution.forEach((row) => {
+        const tr = document.createElement('tr');
+        row.forEach((cell) => {
+          const td = document.createElement('td');
+          td.innerText = cell;
+          td.style.border = '1px solid #333';
+          tr.appendChild(td);
+        });
+        sudokuTable.appendChild(tr);
+      });
     });
 
-    // USD to BTC conversion
-    document.getElementById('usdInput').addEventListener('input', (e) => {
-      const usdValue = parseFloat(e.target.value);
-      if (!isNaN(usdValue) && btcToUsdPrice) {
-        document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
-      }
-    });
-
-    // Initialize app
-    fetchBitcoinPrice();
     initializeMaze();
-    setInterval(fetchBitcoinPrice, 60000);
   </script>
 </body>
 </html>
